--- a/src/AppBundle/Resources/config/routing/default.yml
+++ b/src/AppBundle/Resources/config/routing/default.yml
@@ -11,4 +11,4 @@ default_login:
 default_test:
     path: /test
     defaults: { _controller: "AppBundle:Default:test" }
-    methods: GET
+    methods: POST
