--- a/src/BackendBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/BackendBundle/Resources/config/doctrine/User.orm.yml
@@ -29,6 +29,18 @@ BackendBundle\Entity\User:
             length: 255
             options:
                 fixed: false
+        image:
+            type: string
+            nullable: true
+            length: 255
+            options:
+                fixed: false
+        email:
+            type: string
+            nullable: false
+            length: 255
+            options:
+                fixed: false
         password:
             type: string
             nullable: true
